blog good enough to start with

--- a/_posts/the-cobblers-children-have-no-shoes.jade
+++ b/_posts/the-cobblers-children-have-no-shoes.jade
@@ -1,5 +1,5 @@
 {{{
-	"title" 	: "Cobbler's children have no shoes",
+	"title" 	: "The cobbler's children have no shoes",
 	"tags"  	: [ "site" ],
 	"date" 		: "5-8-2013",
 	"preview"	: "p A few notes and disclaimers about the new site."
@@ -8,7 +8,9 @@
 h5 Notes and disclaimers
 
 ul.bullets
-	li This site is still being added to, please pardon any weirdness.
+	li This site is still 
+		a(href="https://github.com/mrdcrowley/david-crowley-com/issues") being added to
+		| , please pardon any wonkiness.
 	li I have not checked this site in IE and I don't know when I will. I regret nothing.
 	li 
 		a(href="http://nodejs.org") Node
@@ -19,9 +21,14 @@ ul.bullets
 		| , or a 
 		a(href="https://github.com/clocklimited/BasicExpressSite") fresh template
 		| .
+	li How did I ever do without 
+		a(href="http://jade-lang.com") Jade 
+		|  and 
+		a(href="http://learnboost.github.io/stylus/") pre-processors
+		| ?
 	li
 		a(href="http://jsantell.github.io/poet/") Poet
-		|  is a nice tool for generating blog posts from static markdown or jade files that I'm using for this blog.
+		|  is a nice tool for generating blog posts from static markdown or jade files.
 	li Two more things that have been especially pleasant:
 		ul.bullets
 			li The simplicity and price of 
