--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -7,7 +7,7 @@ global-reset()
 
 
 /* =Variables */
-colorBackground = #faf9f0
+colorBackground = rgba(245,245,245,1)
 colorBody = #444
 colorLink = #00a6cd
 colorLinkHover = lighten(colorLink, 10%)
