--- a/views/includes/blogPost.jade
+++ b/views/includes/blogPost.jade
@@ -6,5 +6,5 @@ div.blog.blogPost
 	p.meta
 		- var monthNumber = post.date.getMonth()
 		- var month = monthName[monthNumber]
-		#{month} #{post.date.getDate()}, #{post.date.getFullYear()} 
+		span #{month} #{post.date.getDate()}, #{post.date.getFullYear()} 
 	!{post.content}
