--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,13 +36,5 @@ html
 		script(src='/js/jquery.js')
 		script(src='/js/jquery.fs.boxer.js')
 		script(src='/js/jquery.lazyload.min.js')
+		script(src="/js/storyjs-embed.js")
 		script(src='/js/david-crowley-com.js')
-
-// FUTURE STUFF
-//				block tumblr
-//				block work
-//			#sidebar
-//				block contact
-//				block twitter
-//				block youtube
-//				block github
