added iframes to .thumb rules

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -288,8 +288,8 @@ footer
 .subtle
 	opacity .75
 .thumb
+iframe
 	background-color #fff
-	height auto
 	margin-bottom 1em
 	max-width (100% - 30px)
 	padding 15px
@@ -327,12 +327,12 @@ footer
 	.left,
 	.right
 		float none
+	iframe
 	.thumb
 	.thumb.small
 	.thumb.left
 	.thumb.right
 		float none
-		height auto
 		margin 0
 		margin-bottom 1em
 		max-width 100%
