--- a/public/css/style.css
+++ b/public/css/style.css
@@ -441,9 +441,9 @@ footer {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=75);
   filter: alpha(opacity=75);
 }
-.thumb {
+.thumb,
+iframe {
   background-color: #fff;
-  height: auto;
   margin-bottom: 1em;
   max-width: 70%;
   padding: 15px;
@@ -454,16 +454,20 @@ footer {
   -ms-transition: background-color 0.2s ease-out;
   transition: background-color 0.2s ease-out;
 }
-.thumb.left {
+.thumb.left,
+iframe.left {
   margin-right: 1em;
 }
-.thumb.right {
+.thumb.right,
+iframe.right {
   margin-left: 1em;
 }
-.thumb.small {
+.thumb.small,
+iframe.small {
   max-width: 300px;
 }
-a .thumb:hover {
+a .thumb:hover,
+a iframe:hover {
   background-color: #00bfeb;
 }
 /* =Boxer =Modal */
@@ -491,12 +495,12 @@ a .thumb:hover {
   .right {
     float: none;
   }
+  iframe,
   .thumb,
   .thumb.small,
   .thumb.left,
   .thumb.right {
     float: none;
-    height: auto;
     margin: 0;
     margin-bottom: 1em;
     max-width: 100%;
