map added, needs callback from timeline

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
 	head
 		title David Crowley - #{title}
 		link(rel='stylesheet', href='/css/jquery.fs.boxer.css')
+		link(rel='stylesheet', href='/css/jqvmap.css')
 		link(rel='stylesheet', href='/css/style.css')
 
 	body(id='#{cssID}')
@@ -38,3 +39,5 @@ html
 		script(src='/js/jquery.lazyload.min.js')
 		script(src="/js/storyjs-embed.js")
 		script(src='/js/david-crowley-com.js')
+		script(src='/js/jquery.vmap.min.js')
+		script(src='/js/maps/jquery.vmap.world.js')
