--- a/views/timeline.jade
+++ b/views/timeline.jade
@@ -3,3 +3,4 @@ extends layout
 block content
 
 	iframe(src="http://embed.verite.co/timeline/?source=0AlzoOWPH33GfdHZ2bi11Z0g5Vy1NY215VWlFTEpjVkE", id="timeline-embed")
+	div(id="vmap", style="width: 100%; height: 400px;")
