--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -37,7 +37,7 @@ block content
 	ul#products.list
 		li.one-half.left
 			h4 Move sharing
-			a(href="/img/work/trip.jpg")
+			a(href="/portfolio/sharing")
 				img(data-original="/img/work/trip.jpg", src="/img/placeholder.gif", alt="", height="1861", width="955", class="thumb one-half left")
 			p This page collects social media feeds onto a single page for the duration of a move to make sharing with non-technical family and friends a little easier.
 		li.one-half.right
