--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
 		link(rel='stylesheet', href='/css/style.css')
 
 	body(id='#{cssID}')
-		header.waitToAnimate
+		header
 			a(href='/')
 				h1
 					span(data-shadow-text="David Crowley") David Crowley
@@ -36,5 +36,5 @@ html
 		script(src='/js/jquery.js')
 		script(src='/js/jquery.fs.boxer.js')
 		script(src='/js/jquery.lazyload.min.js')
-		script(src="/js/storyjs-embed.js")
+		script(src='/js/storyjs-embed.js')
 		script(src='/js/david-crowley-com.js')
