--- a/views/includes/portSharing.jade
+++ b/views/includes/portSharing.jade
@@ -2,21 +2,32 @@ extends ../layout
 
 block content
 
-	h2 U-Haul Trip Sharing
+	p
+		a(href="/portfolio") &larr; Back to portfolio
 
-	p Resulting from self-guided research as a result of watching people share moves in various ways on various social media services, this page collects already existing social media feeds onto a single page for the duration of a move to make sharing with family and friends a little easier.
+	h3 #{title}
 
-	ul.clear.one-third.left
-		li Relating the ease of today's moves with the difficulties of moves in decades passed is a subtle way of celebrating America's history and U-Haul's contribution to it. What previously could take dangerous weeks, is now a a couple leisurely days.
+	p.one-third.left(style="margin-top: 2em") Resulting from self-guided research, this page collects already existing social media feeds onto a single page for the duration of a move to make sharing with family and friends a little easier.
 
-		li During a move, opportunities arrive to visit locations celebrated by the SuperGraphics series are displayed, as well as available discounts, deals, services, and anything else that can make a move go just a little bit smoother.
-
-		li Social feeds can be pulled in, creating a scrapbook of sorts, both as the move is happening and to reflect on afterwards.
-
-		li People move everyday, some are especially creative during theres, this is a way to highlight those folks who want to be.
-
-		li For friends and family that are watching, a gift certificate can help to jump start a new life when pennies might be tight.
+	img.two-thirds.right(src="/img/portfolio/share.png")
 
 
-
-	img(src="/img/work/trip.jpg").two-thirds.right
+	h4 Details 
+	ul.list
+		li
+			p.one-third.left Relating the ease of today's moves with the difficulties of decades and centuries passed is a way of celebrating America's history and U-Haul's contribution to it. 
+			img.two-thirds.right(src="/img/portfolio/share1.png")
+		li
+			p.one-third.left During a move, opportunities arise to take a break and visit locations celebrated by the 
+				a(href="http://uhaul.com/supergraphics") SuperGraphics series
+				| , as well as take advantage of discounts, deals, services and anything else that can make a move just a little more smooth or fun. Metadata from social feeds is also scanned to add to the map.
+			img.two-thirds.right(src="/img/portfolio/share2.png")
+		li
+			p.one-third.left Social feeds are pulled in, creating a scrapbook of sorts, both as the move is happening and to reflect on afterwards.
+			img.two-thirds.right(src="/img/portfolio/share3.png")
+		li
+			p.one-third.left People move everyday, some are especially creative, this is a way to highlight them.
+			img.two-thirds.right(src="/img/portfolio/share4.png")
+		li
+			p.one-third.left For friends and family that are watching, a gift certificate can help to jump start a new life at a time that pennies can get tight.
+			img.two-thirds.right(src="/img/portfolio/share5.png")
