--- a/views/includes/portCompanion.jade
+++ b/views/includes/portCompanion.jade
@@ -7,12 +7,16 @@ block content
 
 	h3 #{title}
 
-	p(style="margin-top: 2em") After visiting locations, listening to phone calls, interviewing customers, performing and watching user tests, common themes popped up over and over again where U-Haul was failing customers. I created these wireframes and shopped them around to various stakeholders to create a mobile system that reduces unnecessary interactions, gives people more control of the move, and generally make moving a better experience.
+	p.one-third.left After visiting locations, listening to phone calls, interviewing customers, performing and watching user tests, common themes popped up over and over again where U-Haul was failing customers. I created these wireframes and shopped them around to various stakeholders to create a mobile system that reduces unnecessary interactions, gives people more control of the move, and generally make moving a better experience.
 
 	a(href="/img/portfolio/companion.png")
-		img.thumb.one-half.left(data-original="/img/portfolio/companion.png", src="/img/placeholder.gif", alt="")
+		img.two-thirds.thumb.right(data-original="/img/portfolio/companion.png", src="/img/placeholder.gif", alt="")
 	a(href="/img/portfolio/companion2.png")
-		img.thumb.one-half.right(data-original="/img/portfolio/companion2.png", src="/img/placeholder.gif", alt="")
+		img.two-thirds.thumb.right(data-original="/img/portfolio/companion2.png", src="/img/placeholder.gif", alt="")
+
+
+
+
 
 
 	h4 Details 
@@ -22,7 +26,7 @@ block content
 			img.two-thirds.right(src="/img/portfolio/companion3.png")
 		li
 			p.two-thirds.left Aimed at reducing the biggest cause of long lines, collecting information from a customer is done at any time before a move, rather than at the counter on moving day.
-			img.one-thirds.right(src="/img/portfolio/companion4.png")
+			img.one-third.right(src="/img/portfolio/companion4.png")
 		li
 			p.two-thirds.left Visits to a storage unit are often few and far between, requiring asking someone behind the counter what number the unit is, what the access code is, can someone else get an access code and other questions. Most of these can be handled with already existing technology, just needing to be made available to customers.
 			img.one-third.right(src="/img/portfolio/companion5.png")
