--- a/views/includes/portCompanion.jade
+++ b/views/includes/portCompanion.jade
@@ -10,9 +10,9 @@ block content
 	p.one-third.left After visiting locations, listening to phone calls, interviewing customers, performing and watching user tests, common themes popped up over and over again where U-Haul was failing customers. I created these wireframes and shopped them around to various stakeholders to create a mobile system that reduces unnecessary interactions, gives people more control of the move, and generally make moving a better experience.
 
 	a(href="/img/portfolio/companion.png")
-		img.two-thirds.thumb.right(data-original="/img/portfolio/companion.png", src="/img/placeholder.gif", alt="")
+		img.thumb.two-thirds.thumb.right(data-original="/img/portfolio/companion.png", src="/img/placeholder.gif", alt="")
 	a(href="/img/portfolio/companion2.png")
-		img.two-thirds.thumb.right(data-original="/img/portfolio/companion2.png", src="/img/placeholder.gif", alt="")
+		img.thumb.two-thirds.thumb.right(data-original="/img/portfolio/companion2.png", src="/img/placeholder.gif", alt="")
 
 
 
@@ -23,18 +23,18 @@ block content
 	ul.list
 		li
 			p.one-third.left A visualization to display where in a move the customer is for each page.
-			img.two-thirds.right(src="/img/portfolio/companion3.png")
+			img.thumb.two-thirds.right(src="/img/portfolio/companion3.png")
 		li
 			p.two-thirds.left Aimed at reducing the biggest cause of long lines, collecting information from a customer is done at any time before a move, rather than at the counter on moving day.
-			img.one-third.right(src="/img/portfolio/companion4.png")
+			img.thumb.one-third.right(src="/img/portfolio/companion4.png")
 		li
 			p.two-thirds.left Visits to a storage unit are often few and far between, requiring asking someone behind the counter what number the unit is, what the access code is, can someone else get an access code and other questions. Most of these can be handled with already existing technology, just needing to be made available to customers.
-			img.one-third.right(src="/img/portfolio/companion5.png")
+			img.thumb.one-third.right(src="/img/portfolio/companion5.png")
 		li
 			p.two-thirds.left Customers become very upset when they are told there are no trucks left for them, despite a row of trucks sitting outside. Reminding customers they made a reservation weeks ago, and making it easy for them to cancel, helps everyone out and can save them from a cancellation fee. It's also a good time to introduce 
 				a(href="/portfolio/sharing/") trip sharing
 				|  for the upcoming move if they are still moving.
-			img.one-third.right(src="/img/portfolio/companion6.png")
+			img.thumb.one-third.right(src="/img/portfolio/companion6.png")
 		li
 			p.two-thirds.left A breakdown in the middle of nowhere can be catastrophic. Anything that can be done to collect information and dispatch the right parties to the location is vital. Breakdowns can result in phone call limbo, being redirected from one person to another, each wanting their own bit of information. This is one way to send all the relevant information to the places that need it, all at once.
-			img.one-third.right(src="/img/portfolio/companion7.png")
+			img.thumb.one-third.right(src="/img/portfolio/companion7.png")
