--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
 				h1
 					span(data-shadow-text="David Crowley") David Crowley
 			p.byline
-				| Experience designer, charmed by simplicity.<br/>
+				| Interaction designer, front-end developer and general enthusiast.<br/>
 				a(href="http://twitter.com/mrdcrowley") @mrdcrowley
 				| , 
 				a(href="mailto:david@slantback.net") david@slantback.net
