--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -2,57 +2,21 @@ extends layout
 
 block content
 
-	h2 Portfolio
-
-	h3 Research
-	ul#research.list
-		li
-			h5 Field research
-			p Visit people and places to shadow and interview. Scour recorded sessions, phone calls and analytics.
-		li
-			h5 User tests 
-			p Use research to define tasks, create personas and conduct user tests, remotely and in person.
-		li
-			h5 Findings
-			p Convert findings into reports, sketches, wireframes and working mockups.
-	h3 Prototyping
-	ul.list
-		li
-			img(data-original="/img/work/sketching.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
-			h5 Sketching
-			p Rough sketches and drawings can quickly communicate ideas to find out which ones are worth pursuing.
-		li.clear
-			img(data-original="/img/work/wireframes.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
-			h5 Wireframing
-			p Usually in Omnigraffle or one of the 
-				a(href="http://balsamiq.com") online
-				| &nbsp;
-				a(href="http://gomockingbird.com") tools
-				| .
-		li.clear
-			img(data-original="/img/work/clickable.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
-			h5 Clickable mockups
-			p Using HTML, PDFs or online tools, putting something usable in front of users and stakeholders can communicate and test ideas quickly and before serious development begins.
 	h3 Product creation
 	ul#products.list
 		li.one-half.left
-			h4 U-Haul Trip Sharing
 			a(href="/portfolio/sharing")
-				img(data-original="/img/work/trip.jpg", src="/img/placeholder.gif", alt="", height="1861", width="955", class="thumb one-half left")
-			p This page collects social media feeds onto a single page for the duration of a move to make sharing with family and friends a little easier.
+				h4 U-Haul Trip Sharing
+				img(data-original="/img/work/trip.jpg", src="/img/placeholder.gif", alt="", height="1861", width="955", class="thumb two-thirds left")
 		li.one-half.right
-			h4 U-Haul Moving Companion
 			a(href="/portfolio/companion")
-				img(data-original="/img/work/companion.jpg", src="/img/placeholder.gif", alt="", height="922", width="385", class="thumb one-half left") during a move to make it easily shareable.
-			p The result of studying people moving, this mobile site helps the customer throughout their move, eliminating the need for many visits and phone calls and reducing confusion while moving.
+				h4 U-Haul Moving Companion
+				img(data-original="/img/work/companion.jpg", src="/img/placeholder.gif", alt="", height="922", width="385", class="thumb two-thirds left") during a move to make it easily shareable.
 		li.clear
-			h4 Intranet applications
-			p.one-third Condensed a sprawling intranet into smaller, more usable apps and updated the code to work with mobile devices.
-			div.two-thirds.right
-				a(href="/img/work/tools.jpg")
-					img(data-original="/img/work/tools.jpg", src="/img/placeholder.gif", alt="", height="1045", width="987", class="thumb one-half right")
-				a(href="/img/work/tools_mobile.jpg")
-					img(data-original="/img/work/tools_mobile.jpg", src="/img/placeholder.gif", alt="", height="744", width="396", class="thumb one-third right")
+			a(href="/portfolio/intranet")
+				h4 Intranet applications
+				img.left.two-thirds.thumb(data-original="/img/portfolio/tools.jpg", src="/img/placeholder.gif", alt="", height="1045", width="987")
+				img.right.one-third.thumb(data-original="/img/portfolio/tools_mobile.jpg", src="/img/placeholder.gif", alt="", height="744", width="396")
 
 	h3 Coding
 	div.two-thirds.right
@@ -81,8 +45,42 @@ block content
 	p.subtle.small This site uses Node, Jade, Express and Stylus, see it on 
 		a(href="https://github.com/mrdcrowley/david-crowley-com") GitHub
 		| .
+
+	div.clear.one-third.left
+		h3 Research
+		ul#research.list
+			li
+				h5 Field research
+				p Visit people and places to shadow and interview. Scour recorded sessions, phone calls and analytics.
+			li
+				h5 User tests 
+				p Use research to define tasks, create personas and conduct user tests, remotely and in person.
+			li
+				h5 Findings
+				p Convert findings into reports, sketches, wireframes and working mockups.
+
+	div.two-thirds.right
+		h3 Prototyping
+		ul.list
+			li
+				img(data-original="/img/work/sketching.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
+				h5 Sketching
+				p Rough sketches and drawings can quickly communicate ideas to find out which ones are worth pursuing.
+			li.clear
+				img(data-original="/img/work/wireframes.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
+				h5 Wireframing
+				p Usually in Omnigraffle or one of the 
+					a(href="http://balsamiq.com") online
+					| &nbsp;
+					a(href="http://gomockingbird.com") tools
+					| .
+			li.clear
+				img(data-original="/img/work/clickable.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
+				h5 Clickable mockups
+				p Using HTML, PDFs or online tools, putting something usable in front of users and stakeholders can communicate and test ideas quickly and before serious development begins.
+	
 	h3 Arduino and Raspberry Pi
-	ul.list
+	ul.list.center
 		li
 			h5 Socialite
 			p The 
