--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,8 +9,8 @@ html
 		header
 			h1
 				a(href='/')
-					span(data-shadow-text="David Crowley") David Crowley
-			p.byline
+					img(src="/img/logo.png", alt="")
+			p#byline
 				| Interaction designer, front-end developer and general enthusiast.<br/>
 				a(href="http://twitter.com/mrdcrowley") @mrdcrowley
 				| , 
@@ -22,6 +22,8 @@ html
 				|  and 
 				a(href="http://www.youtube.com/user/slantback/videos") YouTube
 				| .
+			a#hire(href="/portfolio")
+				| Available for hire
 		#container
 			#content
 				block content
