--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,8 +1,8 @@
 @import 'nib'
 @import url('http://fonts.googleapis.com/css?family=Arvo')
 @import url('http://fonts.googleapis.com/css?family=GFS+Didot')
-@import url('http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic')
 @import url('http://fonts.googleapis.com/css?family=Raleway:600,900')
+@import url('http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic')
 
 global-reset()
 
@@ -11,7 +11,7 @@ global-reset()
 colorBackground = rgba(245,245,245,1)
 colorBody = #444
 colorLink = #666
-colorLinkHover = #00a6cd
+colorLinkHover = #333
 colorHeader = #333
 colorMain = #333
 fontBody = Arvo, Georgia, sans-serif
@@ -69,41 +69,13 @@ header
 	padding-bottom 0
 	text-align center
 	text-shadow 0px -1px 0px darken(colorHeader, 30%)
-	transition height animationSpeed linear
-	h1
-		color: rgba(0,0,0,.5)
-		font: 600 1.5em/1 'Raleway', sans-serif
-		letter-spacing: .5em
-		margin 0
-		img
-			height 48px
-			width 82px
-			margin .5em 0
-		span
-			font-size: 1.5em
-			z-index: 100
-			transition all animationSpeed ease-out
-			&:hover
-				// text-shadow 0 .04em 0 #9cb8b3
-		span,
-		span:after
-			font-weight: 900
-			color: colorBackground
-			white-space: nowrap
-			display: inline-block
-			position: relative
-			letter-spacing: .1em
-			padding: .2em 0 .25em 0
-		span:after
-			content: attr(data-shadow-text)
-			color rgba(255,255,255,.25)
-			text-shadow: none
-			position: absolute
-			left 0
-			top 3px
-			z-index: -1;
-			-webkit-mask-image: url(http://f.cl.ly/items/1t1C0W3y040g1J172r3h/mask.png)
-			transition all animationSpeed ease-out
+	#logo a
+		background transparent url("/img/logo.png")
+		display block
+		height 55px
+		margin .5em auto
+		text-indent -99999px
+		width 91px
 	#byline
 		color lighten(colorHeader,30%)
 		font-family Arvo
@@ -153,12 +125,12 @@ header
 	h3
 		background rgba(0,0,0,.2)
 		clear both
+		font-family "Noto Sans"
 		font-size 180%
-		font-weight 700
 		padding .5em
 	h4
 		clear both
-		font-size: 140%
+		font-size 140%
 		font-weight 700
 	h5
 		font-weight bold
@@ -168,7 +140,6 @@ footer
 	clear both
 	font-size 80%
 	margin auto
-	opacity .5
 	padding-top 5em
 	text-align center
 
@@ -260,8 +231,16 @@ footer
 
 /* =portfolio */
 #portfolio
-	#content
-		text-align left
+	a
+		h4
+			color colorLink
+		&:hover h4
+			color colorLinkHover
+	h3
+	h4
+	h5
+		font-family "Raleway"
+		font-weight 900
 	.heart
 		color red
 	#products
@@ -275,8 +254,11 @@ footer
 
 /* =pagePiece */
 #pagePiece
-	#content
-		text-align left
+	h3
+	h4
+	h5
+		font-family "Raleway"
+		font-weight 900
 	h4
 		padding-top 2em
 	.list
@@ -344,8 +326,13 @@ footer
 @media all and (max-device-width: 751px)
 	body
 		font-size 200%
+	header
+		#logo a
+			background transparent url("/img/logo@2x.png")
+			height 109px
+			width 181px
 	#container
-		padding 0 2em
+		padding 0 1em
 	.one-half,
 	.one-third,
 	.two-thirds
