--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -91,9 +91,8 @@ block content
 		li
 			h5 Ultimate Machine
 			p
-				a(href="https://github.com/mrdcrowley/ultimate_machine") Created a version
-				|  of information theorist Claude Shannon's 
-				a(href="http://www.kk.org/thetechnium/archives/2008/03/the_unspeakable.php") Ultimate Machine
+				| Information theorist Claude Shannon's 
+				a(href="https://github.com/mrdcrowley/ultimate_machine") Ultimate Machine
 				| .
 			iframe(height="360", width="640", src="http://www.youtube.com/embed/k3xFX3sR0iE", frameborder="0", allowfullscreen)
 
