--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,9 +7,8 @@ html
 
 	body(id='#{cssID}')
 		header
-			h1
-				a(href='/')
-					img(src="/img/logo.png", alt="")
+			h1#logo
+				a(href='/') David Crowley
 			p#byline
 				| Interaction designer, front-end developer and general enthusiast.<br/>
 				a(href="http://twitter.com/mrdcrowley") @mrdcrowley
