--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
 			h1#logo
 				a(href='/') David Crowley
 			p#byline
-				| Interaction designer, front-end developer and general enthusiast.<br/>
+				| Interaction designer, front-end developer and human enthusiast.<br/>
 				a(href="http://twitter.com/mrdcrowley") @mrdcrowley
 				| , 
 				a(href="mailto:david@slantback.net") david@slantback.net
