--- a/views/includes/portIntranet.jade
+++ b/views/includes/portIntranet.jade
@@ -7,18 +7,43 @@ block content
 
 	h3 #{title}
 
-	div.center
-		p U-Haul's intranet needed an update for the mobile age.
-		a(href="/img/portfolio/tools_mobile.jpg")
-			img.center.thumb(data-original="/img/portfolio/tools_mobile.jpg", src="/img/placeholder.gif", alt="")
+	a(href="/img/portfolio/tools_mobile.jpg")
+		img.thumb.one-third.right(src="/img/portfolio/tools_mobile.jpg", alt="")
+	p After 20 years of growing in different directions, U-Haul's various intranets ended up requiring different logins, devices, software and tutorials. It became difficult to find information, let alone accomplish anything in a timely manner.
+	p U-Haul's internal systems needed an update for the mobile age.
+	p After research, user interviews and shadowing, and discovering processes still being done with paper or by word of mouth, a few common themes emerged: 
+		em people
+		| , 
+		em places
+		|  and 
+		em things
+		| .
+	p By grouping everything into these three categories it became easy to organize the tools and information.
+
+	h3 People
+	a(href="/img/portfolio/tools_person.png")
+		img.thumb.two-thirds.left(src="/img/portfolio/tools_person.png", alt="")
+	p.one-third Quickly see if someone has outstanding payments due and should not be rented to.
+	p.one-third Find nearby locations.
+	p.one-third Make notes and see previous interactions.
+	p.one-third Ring up goods and services or add them to their uhaul.com shopping cart.	
+	
+	h3.clear Places
+	a(href="/img/portfolio/tools_place.png")
+		img.thumb.two-thirds.left(src="/img/portfolio/tools_place.png", alt="")
+	p.one-third See services offered.
+	p.one-third Understand the conditions of the area and what's nearby for people that may not be at that location when answering questions.
+	p.one-third Learn how goods and services are performing, or ring them up.
+	p.one-third Read what customers think of the location.
+	p.one-third Manage special campaigns the location is involved in.
 
 
+	h3.clear Things
+	a(href="/img/portfolio/tools_thing.png")
+		img.thumb.two-thirds.left(src="/img/portfolio/tools_thing.png", alt="")
+	p.one-third Get a quick overview of equipment features and abilities.
+	p.one-third See what the current status is and what it should be.
+	p.one-third View the history of problems and learn how to fix them.
+	p.one-third Unlock the doors remotely.
 
-	h4 Details 
-	ul.list
-		li
-			img.thumb.two-thirds.left(src="/img/portfolio/tools.jpg")
-			p.one-third.left Combined information that previously required separate logins, access codes and devices
-			p.one-third.left Updates created from user interviews, site visits, logs and analytics.
-			p.one-third.left Old code was updated to meet new programming standards.
-			p.one-third.left Existing applications were enhanced with mobile functionality.
+
